--- a/src/styles/CSVParser/CSVParser.css
+++ b/src/styles/CSVParser/CSVParser.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   width: 65%;
-  margin-top: 25px;
+  margin-top: 100px;
   flex-direction: column;
 }
 @media screen and (max-width: 480px) {
@@ -19,7 +19,14 @@
     width: 200px!important;
   }
 }
+.img_description{
+  width: 100%;
+}
 
+.description_block_text{
+  width: 100%;
+  word-wrap: break-word; 
+}
 .room_button{
     color: black;
     border: 1px dashed #df2808;
