--- a/src/styles/CSVParser/CSVParser.css
+++ b/src/styles/CSVParser/CSVParser.css
@@ -135,13 +135,13 @@
 }
 
 input[type="file"] {
-  width: 350px;
+  width: 200px;
   max-width: 100%;
   color: #444;
   padding: 5px;
   background: #fff;
   border-radius: 10px;
-  border: 1px solid #555;
+  border: none;
 }
 
 input[type="file"]::file-selector-button {
