--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -4,7 +4,7 @@
 }
 
 .send-text-main {
-    margin-left: 2%;
+    margin-left: 15%;
 }
 
 .alert_div {
@@ -55,6 +55,7 @@
     justify-content: center;
 }
 .horizontal_line_separator{
+    margin-left: 20%;
     width: 100%;
     height: 1px;
     background-color: #000000;
@@ -72,7 +73,7 @@
 }
 .header_furniture {
     padding: 10px 10px 10px 10px;
-    margin-right: auto;
+    margin-left: 18%;
 }
 .arrow{
     width: 20px;
@@ -131,6 +132,7 @@
   }
 
 .next_stage_wrapper{
+    margin-left: 15%;
     margin-top: 40px;
     padding-top: 30px;
     border-top: 2px dashed #000000 ;
@@ -207,7 +209,7 @@ input[disabled]:hover{
 .file_div {
     gap: 30px;
     display: flex;
-    margin-left: 5%;
+    margin-left: 21%;
     /* justify-content: space-between; */
 }
 
@@ -374,6 +376,32 @@ li .active::after {
     background-color: #efd8b5;
 }
 
+@media screen and (min-width:1100px){
+    .stage_wrapper {
+        margin-left: 5%;
+    }
+}
+@media screen and (min-width:1200px){
+    .stage_wrapper {
+        margin-left: 8%;
+    }
+}
+@media screen and (min-width:1280px){
+    .stage_wrapper {
+        margin-left: 12%;
+    }
+}
+@media screen and (min-width:1445px){
+    .stage_wrapper {
+        margin-left: 15%;
+    }
+}
+@media screen and (min-width:1517px){
+    .stage_wrapper {
+        margin-left: 18%;
+    }
+}
+
 @media screen and (max-width:480px){
     .stage_wrapper {
         padding-top: 8%;
@@ -411,6 +439,7 @@ li .active::after {
     }
     .next_stage_wrapper{
         width: 100%;
+        margin-left: 0%;
     }
     
     .furniture_block{
@@ -437,6 +466,9 @@ li .active::after {
         max-width: 300px;
         height: 3px;
         background-color: #d9d9d9;
+    }
+    .horizontal_line_separator{
+        margin-left: 0%
     }
 }
 
@@ -486,7 +518,7 @@ li .active::after {
     font-size: 16px;
     width: 100%;
     margin-bottom: 15px;
-    margin-left: 5%;
+    margin-left: 21%;
     padding: 15px;
     border-radius: 10px;
     transition: all .5s;
@@ -638,6 +670,10 @@ justify-content: center;
         padding: 10px 0px 0px 0px;
         margin-left: 0px;
     }
+
+    .header_furniture {
+        margin-left: auto;
+    }
     
     .questions-text {
         font-family: "Roboto Flex", sans-serif;
@@ -664,6 +700,7 @@ justify-content: center;
     }
     .file_div{
         justify-content: space-between;
+        margin-left: 0%;
     }
     .file_input{
         width: 150px;
