--- a/src/styles/Form_reg.css
+++ b/src/styles/Form_reg.css
@@ -48,6 +48,7 @@
     margin-top: 30px;
     border-top: 2px dashed #000000;
     width: 70%;
+    margin-left: 15%;
 }
 .body_furniture{
     flex-direction: column;
@@ -56,6 +57,7 @@
 }
 .horizontal_line_separator{
     margin-left: 20%;
+    margin-top: 4%;
     width: 100%;
     height: 1px;
     background-color: #000000;
@@ -74,7 +76,6 @@
 .header_furniture {
     font-family: "Roboto Flex", sans-serif;;
     padding: 10px 10px 10px 10px;
-    margin-left: 20%;
 }
 .arrow{
     width: 20px;
@@ -167,7 +168,7 @@ input[disabled]:hover{
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
-  margin-left: 2%;
+  margin-left: 0%;
 }
 .file_input {
     width: 200px;
@@ -434,6 +435,7 @@ li .active::after {
       }
     .submit_align_wrapper{
         width: 100%;
+        margin-left: 0%;
     }
     .body_furniture{
         width: 100%;
@@ -504,6 +506,14 @@ li .active::after {
     font-size: 16px;
     margin-top: 10px;
     padding: 10px 0px 0px 0px;
+    margin-left: 20%;
+}
+
+.text_header2 {
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
+    margin-top: 10px;
+    padding: 10px 0px 0px 0px;
     margin-left: 15%;
 }
 
@@ -511,6 +521,7 @@ li .active::after {
     font-family: "Roboto Flex", sans-serif;
     font-size: 16px;
     padding-top: 5px;
+    margin-left: 20%;
 }
 
 .obj_description {
@@ -527,6 +538,18 @@ li .active::after {
     border: 1px solid #8D0709;
 }
 
+.fa-star {
+    color: #8D0709
+}
+.current-room {
+    display: flex;
+    align-items: center; /* Align items vertically */
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 16px;
+    margin-left: 2%;
+    gap: 8px; /* Adjust the value to control the gap size */
+  }
+  
 .obj_description:focus {
     outline: none;
     border-color: #8D0709;
@@ -563,9 +586,7 @@ li .active::after {
     background-color: #8D0709;
     width: 200px;
     height: 45px;
-    border: solid;
-    border-color: #8D0709;
-    border-width: 3px;
+    border: none;
     text-align: center;
     transition: background-color 300ms ease-out;
 }
@@ -586,6 +607,7 @@ li .active::after {
 .slider_image{
     max-width: 95%;
     height: 400px;
+    margin-left: -16%;
 }
 .slider_div{
     display: flex;
@@ -638,7 +660,16 @@ justify-content: center;
     font-size: 16px;
 }
 
+@media screen and (max-width:820px){
+    .send-text-main {
+        margin-left: 10%;
+    }
+}
+
 @media screen and (max-width:480px){
+    .current-room {
+        font-size: 12px;
+    }
     .user_input {
         font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
@@ -664,6 +695,13 @@ justify-content: center;
         border: 1px solid #8D0709;
     }
     .text_header {
+        font-family: "Roboto Flex", sans-serif;
+        font-size: 12px;
+        margin-top: 10px;
+        padding: 10px 0px 0px 0px;
+        margin-left: 0px;
+    }
+    .text_header2 {
         font-family: "Roboto Flex", sans-serif;
         font-size: 12px;
         margin-top: 10px;
